--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0"
         >
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-telegram"></i>
         </a>
 
         <!-- آیکون فیسبوک -->
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0 group-hover:delay-75"
         >
-          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-whatsApp"></i>
         </a>
 
         <!-- آیکون لینکدین -->
