--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <span
         class="absolute inset-0 flex gap-5 items-center justify-center px-7 opacity-0 transition-opacity ease-in-out group-hover:opacity-100"
       >
-        <!-- آیکون توییتر -->
+        <!-- آیکون تلگرام -->
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0"
         >
@@ -63,7 +63,7 @@
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0 group-hover:delay-75"
         >
-          <i class="fa-brands fa-whatsApp"></i>
+          <i class="fa-brands fa-instagram"></i>
         </a>
 
         <!-- آیکون لینکدین -->
