--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0 group-hover:delay-150"
         >
-          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-whatsapp"></i>
         </a>
       </span>
     </button>
