--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
           <i class="fa-brands fa-telegram"></i>
         </a>
 
-        <!-- آیکون فیسبوک -->
+        <!-- آیکون اینستاگرام -->
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0 group-hover:delay-75"
         >
           <i class="fa-brands fa-instagram"></i>
         </a>
 
-        <!-- آیکون لینکدین -->
+        <!-- آیکون واتساپ -->
         <a
           class="transition-transform text-lg duration-200 ease-in-out translate-y-10 group-hover:translate-y-0 group-hover:delay-150"
         >
